# graphics-course-tpi

./: .nvimrc  CMakeLists.txt  run_cmake.bat  run_cmake.sh
common/: CMakeLists.txt
common/render_components/: AcesTonemapper.cpp  AcesTonemapper.hpp  CMakeLists.txt  DebugDrawer.hpp  HistogramEqTonemapper.cpp  HistogramEqTonemapper.hpp  IComponent.hpp  ITonemapper.hpp  ReinhardTonemapper.cpp  ReinhardTonemapper.hpp
common/render_components/shaders/: aces_tonemap.frag  histogram_binning.comp  histogram_clear.comp  histogram_debug.frag  histogram_distribution.comp  histogram_minmax.comp  histogram_pre_refine.comp  histogram_tonemap.frag  histogram_tonemapping.h  reinhard_tonemap.frag
common/render_utils/: BboxRenderer.cpp  BboxRenderer.hpp  BitonicSort.cpp  BitonicSort.hpp  CMakeLists.txt  Common.cpp  Common.hpp  PostfxRenderer.cpp  PostfxRenderer.hpp  QuadRenderer.cpp  QuadRenderer.hpp
common/render_utils/shaders/: bbox.frag  bbox.vert  bitonic_sort_float.comp  common.frag.inc  (+15 more)
common/scene/: CMakeLists.txt  Camera.hpp  SceneManager.cpp  SceneManager.hpp
common/utils/: Bitstream.hpp  CMakeLists.txt  Common.hpp
common/wsi/: OsWindow.hpp  OsWindowingManager.cpp
samples/shadowmap/: WorldRenderer.cpp
tasks/: CMakeLists.txt
tasks/bindless/renderer/: App.hpp  CMakeLists.txt  Renderer.cpp  WorldRenderer.cpp  WorldRenderer.hpp
tasks/bindless/renderer/shaders/: gbuffer_resolve.frag  static_mesh.frag
tasks/deferred/renderer/: App.cpp  CMakeLists.txt  Renderer.cpp  Renderer.hpp  WorldRenderer.cpp  WorldRenderer.hpp  main.cpp
tasks/deferred/renderer/shaders/: gbuffer_resolve.frag  static_mesh.frag
tasks/inflight_frames/: App.cpp  App.hpp  CMakeLists.txt
tasks/local_shadertoy1/: App.cpp  App.hpp  CMakeLists.txt
tasks/local_shadertoy2/: App.cpp  App.hpp  CMakeLists.txt
tasks/model_bakery/: CMakeLists.txt
tasks/terrain/: CMakeLists.txt
tasks/terrain/renderer/: App.cpp  CMakeLists.txt  Renderer.cpp  Renderer.hpp  WorldRenderer.cpp  WorldRenderer.hpp
tasks/terrain/renderer/shaders/: bindless.frag.inc  clipmap_gen.comp  common.frag.inc  culling.comp  gbuffer_resolve.frag  static_mesh.frag  static_mesh.vert  terrain_mesh.frag  terrain_mesh.glsl.inc  terrain_mesh.tesc  terrain_mesh.tese  terrain_mesh.vert
tasks/tonemapping/renderer/: App.cpp  App.hpp  CMakeLists.txt  Config.hpp  Renderer.cpp  WorldRenderer.cpp  WorldRenderer.hpp  main.cpp
tasks/tonemapping/renderer/shaders/: bindless.glsl.inc  bitonic_sort_float.comp  clipmap_gen.comp  common.frag.inc  gbuffer_resolve.frag  histogram_binning.comp  histogram_clear.comp  histogram_clear_minmax.comp  histogram_debug.frag  histogram_distribution.comp  histogram_minmax.comp  histogram_pre_refine.comp  histogram_refine.comp  reset_indirect_commands.comp  terrain_mesh.tese  tonemap.frag
(+68 files in other folders)
